add oci:// prefix for renovate annotation
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/core/monitoring/grafana-operator/app/helm-release.yaml
+++ b/cluster/core/monitoring/grafana-operator/app/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 15m
   chart:
     spec:
-      # renovate: registryUrl=ghcr.io/grafana/helm-charts/grafana-operator
+      # renovate: registryUrl=oci://ghcr.io/grafana/helm-charts/grafana-operator
       chart: grafana-operator
       version: v5.5.2
       sourceRef:
