(recyclarr) actually enable sonarr config and radarr-uhd

--- a/cluster/apps/media/recyclarr/config/kustomization.yaml
+++ b/cluster/apps/media/recyclarr/config/kustomization.yaml
@@ -11,8 +11,9 @@ configMapGenerator:
   - name: recyclarr-sub-configs
     namespace: media
     files:
-      # - sonarr-hd.yaml
+      - sonarr-hd.yaml
       - radarr-hd.yaml
+      - radarr-uhd.yaml
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
