--- a/cluster/apps/media/plex/kustomization.yaml
+++ b/cluster/apps/media/plex/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: media
 resources:
+  - ./pvc-cache.yaml
   - ./helm-release.yaml
   - ./pdb.yaml
   - ./alerts/gatus.yaml
