--- a/cluster/apps/media/stash/app/helm-release.yaml
+++ b/cluster/apps/media/stash/app/helm-release.yaml
@@ -34,21 +34,15 @@ spec:
   values:
     defaultPodOptions:
       affinity:
-          podAntiAffinity:
-            preferredDuringSchedulingIgnoredDuringExecution:
-              - weight: 100
-                podAffinityTerm:
-                  labelSelector:
-                    matchExpressions:
-                      - key: app.kubernetes.io/name
-                        operator: In
-                        values:
-                          - plex
-                      - key: kubernetes.io/hostname
-                        operator: In
-                        values:
-                          - slowpoke
-                  topologyKey: kubernetes.io/hostname
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: app.kubernetes.io/instance
+                    operator: In
+                    values:
+                      - "plex"
+              topologyKey: "kubernetes.io/hostname"
     controllers:
       main:
         type: statefulset
