--- a/cluster/apps/media/stash/app/helm-release.yaml
+++ b/cluster/apps/media/stash/app/helm-release.yaml
@@ -97,7 +97,8 @@ spec:
           hajimari.io/group: "media"
           hajimari.io/instance: "bloop-quarky"
           cert-manager.io/cluster-issuer: "letsencrypt-production"
-          cert-manager.io/ip-sans: 127.0.0.1
+          cert-manager.io/ip-sans: "127.0.0.1"
+          cert-manager.io/uri-sans: "stash.media,stash.media.svc.cluster.local"
           traefik.ingress.kubernetes.io/service.passhostheader: "true"
           traefik.ingress.kubernetes.io/router.priority: "99"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
