--- a/cluster/apps/media/stash/app/helm-release.yaml
+++ b/cluster/apps/media/stash/app/helm-release.yaml
@@ -103,7 +103,7 @@ spec:
           traefik.ingress.kubernetes.io/router.priority: "99"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           ingress.kubernetes.io/protocol: https
-          traefik.ingress.kubernetes.io/service.serversscheme: https
+          #raefik.ingress.kubernetes.io/service.serversscheme: https
           traefik.ingress.kubernetes.io/router.middlewares: networking-bloopnet-xyz-auth@kubernetescrd
         hosts:
           - host: &host stash.${XYZ_DOMAIN}
@@ -123,20 +123,20 @@ spec:
         existingClaim: stash-config-v1
         globalMounts:
           - path: /root/.stash
-      tls-crt:
-        enabled: true
-        name: tls.stash
-        type: secret
-        globalMounts:
-          - subPath: tls.crt
-            path: /root/.stash/stash.crt
-      tls-key:
-        enabled: true
-        name: tls.stash
-        type: secret
-        globalMounts:
-          - subPath: tls.key
-            path: /root/.stash/stash.key
+      #tls-crt:
+      #  enabled: true
+      #  name: tls.stash
+      #  type: secret
+      #  globalMounts:
+      #    - subPath: tls.crt
+      #      path: /root/.stash/stash.crt
+     # tls-key:
+    #    enabled: true
+     #   name: tls.stash
+     #   type: secret
+     #   globalMounts:
+     #     - subPath: tls.key
+    #        path: /root/.stash/stash.key
       media:
         enabled: true
         type: custom
