--- a/cluster/apps/media/stash/app/helm-release.yaml
+++ b/cluster/apps/media/stash/app/helm-release.yaml
@@ -111,7 +111,7 @@ spec:
               - path: /
                 service:
                   name: main
-                  port: http
+                  port: https
         tls:
           - hosts:
               - *host
