--- a/cluster/apps/downloads/whisparr/helm-release.yaml
+++ b/cluster/apps/downloads/whisparr/helm-release.yaml
@@ -24,8 +24,8 @@ spec:
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
-    - name: vpn-gateway
-      namespace: vpn-gateway
+    #- name: vpn-gateway
+    #  namespace: vpn-gateway
   valuesFrom:
     - kind: Secret
       name: *app
