--- a/cluster/apps/monitoring/gatus/app/kustomization.yaml
+++ b/cluster/apps/monitoring/gatus/app/kustomization.yaml
@@ -23,5 +23,7 @@ patches:
     kind: ConfigMap
     metadata:
       name: gatus-announcememts
+      labels:
+        gatus.io/enabled: true
       annotations:
         gatus.io/enabled: true
