--- a/cluster/core/rook-ceph/rook-ceph/cluster/helm-release.yaml
+++ b/cluster/core/rook-ceph/rook-ceph/cluster/helm-release.yaml
@@ -54,8 +54,8 @@ spec:
           osd_class_update_on_start: "false" # quote
           #device_failure_prediction_mode: local # requires mgr module
       # continueUpgradeAfterChecksEvenIfNotHealthy: true
-      cephVersion:
-        image: quay.io/ceph/ceph:v19.2.3
+      #cephVersion:
+       # image: quay.io/ceph/ceph:v19.2.3
 
       csi:
         readAffinity:
