--- a/cluster/core/tigera-operator/helm-release.yaml
+++ b/cluster/core/tigera-operator/helm-release.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: tigera-operator
@@ -114,7 +114,7 @@ spec:
     tigeraOperator:
       # datasource=docker depName=tigera/operator
       image: tigera/operator
-      version: v1.38.0
+      version: v1.38.12 #TODO: update to 1.40.x with breaking changes https://github.com/tigera/operator/releases
       registry: quay.io
       nodeSelector:
         matchExpressions:
