--- a/cluster/core/kube-system/kube-vip/rbac.yaml
+++ b/cluster/core/kube-system/kube-vip/rbac.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -13,11 +12,24 @@ metadata:
   name: system:kube-vip-role
 rules:
   - apiGroups: [""]
-    resources: ["services", "services/status", "nodes"]
-    verbs: ["list", "get", "watch", "update"]
+    resources: ["services/status"]
+    verbs: ["update"]
+  - apiGroups: [""]
+    resources: ["services", "endpoints"]
+    verbs: ["list","get","watch", "update"]
+  - apiGroups: [""]
+    resources: ["nodes"]
+    verbs: ["list","get","watch", "update", "patch"]
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["list", "get", "watch", "update", "create"]
+  - apiGroups: ["discovery.k8s.io"]
+    resources: ["endpointslices"]
+    verbs: ["list","get","watch", "update"]
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["list"]
+
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -28,6 +40,7 @@ roleRef:
   kind: ClusterRole
   name: system:kube-vip-role
 subjects:
-  - kind: ServiceAccount
-    name: kube-vip
-    namespace: kube-system
+- kind: ServiceAccount
+  name: kube-vip
+  namespace: kube-system
+  
