--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./monitoring
   - ./cert-manager
   # old: disable kube-vip after editing svc/kubernetes
-  - ./kube-system
+  # - ./kube-system
   - ./metallb-system
   - ./rook-ceph
   - ./kubegres
