--- a/cluster/core/tigera-operator/bgp/bgp-config.yaml
+++ b/cluster/core/tigera-operator/bgp/bgp-config.yaml
@@ -8,13 +8,11 @@ spec:
   asNumber: ${NETWORK_BGP_K8S_ASN}
   nodeToNodeMeshEnabled: true
   serviceClusterIPs: []
-  serviceExternalIPs: []
-    #- cidr: "10.1.0.65/32" # VIP kube-api
-    #- cidr: "10.1.0.0/24" # Experiment
   serviceLoadBalancerIPs:
     - cidr: "${NETWORK_BGP_BLOCK_V4}"
     # metallb v4 range 10.1.0.100-10.1.0.255
     - cidr: "10.1.0.96/27"
+  serviceExternalIPs:
     - cidr: "10.1.0.128/25"
     # Don't try to advertise ipv6 without ipv6 peers. It causes bird to stall
     #- cidr: "${METALLB_LB_IP6_RANGE}"
