--- a/provision/ansible/kubernetes/ansible.cfg
+++ b/provision/ansible/kubernetes/ansible.cfg
@@ -12,8 +12,8 @@ stdout_callback             = yaml
 log_path                = ~/.ansible/ansible.log
 inventory               = ./inventory
 library                 = /usr/share/my_modules
-remote_tmp              = /tmp/.ansible/tmp
-local_tmp               = /tmp/.ansible/tmp
+remote_tmp              = /tmp
+local_tmp               = /tmp/.ansible
 roles_path              = ~/.ansible/roles:./roles:./../roles
 collections_path        = ~/.ansible/collections
 retry_files_enabled     = False
