--- a/provision/ansible/kubernetes/inventory/group_vars/worker/k3s.yml
+++ b/provision/ansible/kubernetes/inventory/group_vars/worker/k3s.yml
@@ -15,6 +15,8 @@ k3s_agent:
     # Allow pods to be rescheduled quicker in the case of a node failure
     # https://github.com/k3s-io/k3s/issues/1264
     - "node-status-update-frequency=4s"
+    # Because ubuntu is beholden to systemd
+    - "resolv-conf=/run/systemd/resolve/resolv.conf"
   # disable-apiserver: true
   # disable-controller-manager: true
   # disable-scheduler: true
