--- a/provision/ansible/kubernetes/inventory/hosts.yml
+++ b/provision/ansible/kubernetes/inventory/hosts.yml
@@ -15,7 +15,13 @@ kubernetes:
           ansible_host: 10.1.0.91
           ansible_python_interpreter: /usr/bin/python3
           node_name: k8s-3
-    worker: {}
+
+    worker:
+      hosts:
+        k8s-4:
+          ansible_host: 10.1.0.79
+          ansible_python_interpreter: /usr/bin/python3
+          node_name: k8s-4
     #   hosts:
     #     k8s-7:
     #       ansible_host: 10.1.0.94
