--- a/cluster/core/tigera-operator/bgp/bgp-config.yaml
+++ b/cluster/core/tigera-operator/bgp/bgp-config.yaml
@@ -8,7 +8,7 @@ spec:
   asNumber: ${NETWORK_BGP_K8S_ASN}
   nodeToNodeMeshEnabled: true
   serviceClusterIPs:
-    - code: "10.43.0.1/32"
+    - cidr: "10.43.0.1/32"
   serviceLoadBalancerIPs:
     - cidr: "${NETWORK_BGP_BLOCK_V4}"
     # metallb v4 range 10.1.0.100-10.1.0.255
