--- a/cluster/core/kube-system/kube-vip/daemon-set.yaml
+++ b/cluster/core/kube-system/kube-vip/daemon-set.yaml
@@ -35,8 +35,8 @@ spec:
               value: "true"
             - name: cp_namespace
               value: kube-system
-            - name: vip_interface
-              value: "eno1" # will only work for some nodes because they have different names, but kube-vip doesn't seem to really mind that it's a silly thing. idk what happened to the auto selection. Fortunately this is only needed until I figure out address assignment without manual steps for calico to use bgp anycast
+            - name: bgp_routerinterface
+              value: "eno1" # will only work for some nodes because they have different names, but this is theoretically overwritten by the routerId. Fortunately this is only needed until I figure out address assignment without manual steps for calico to use bgp anycast
             - name: svc_enable
               value: "false"
             - name: address
