--- a/provision/ansible/kubernetes/inventory/hosts.yml
+++ b/provision/ansible/kubernetes/inventory/hosts.yml
@@ -22,6 +22,10 @@ kubernetes:
           ansible_host: 10.1.0.79
           ansible_python_interpreter: /usr/bin/python3
           node_name: k8s-4
+        k8s-5:
+          ansible_host: 10.1.0.67
+          ansible_python_interpreter: /usr/bin/python3
+          node_name: k8s-5
     #   hosts:
     #     k8s-7:
     #       ansible_host: 10.1.0.94
