--- a/cluster/core/tigera-operator/bgp/bgp-config.yaml
+++ b/cluster/core/tigera-operator/bgp/bgp-config.yaml
@@ -13,8 +13,8 @@ spec:
     - cidr: "${NETWORK_BGP_BLOCK_V4}" # Needs to line up with what metallb has since we only do bgp advertisement from calico. Metallb acts like IPAM
     # metallb v4 range 10.1.0.100-10.1.0.255
     - cidr: "10.1.0.96/27"
-  serviceExternalIPs:
-    - cidr: "10.1.0.128/25" # Should include Kube API?
+  serviceExternalIPs: []
+    # - cidr: "10.1.0.128/25" # Should include Kube API?
     # Don't try to advertise ipv6 without ipv6 peers. It causes bird to stall
     #- cidr: "${METALLB_LB_IP6_RANGE}"
     #- cidr: "${NETWORK_BGP_BLOCK_V6}"
