--- a/provision/ansible/kubernetes/inventory/group_vars/master/k3s.yml
+++ b/provision/ansible/kubernetes/inventory/group_vars/master/k3s.yml
@@ -12,6 +12,7 @@ k3s_server:
     # Should be the same as kube-vip address
     - "{{ k3s_registration_address }}"
     - "{{ ansible_default_ipv6.address }}"
+    # - "{{ arp_kubevip_address }}" # backup
   # Disable Docker - this will use the default containerd CRI
   docker: false
   flannel-backend: "none" # This needs to be in quotes
