--- a/cluster/core/kube-system/kube-vip/daemon-set.yaml
+++ b/cluster/core/kube-system/kube-vip/daemon-set.yaml
@@ -26,9 +26,11 @@ spec:
             - manager
           env:
             - name: vip_arp
-              value: "false"
+              value: "true"
             # - name: vip_interface
             #   value: lo
+            - name: vip_ddns
+              value: "false"
             - name: port
               value: "6443"
             - name: vip_cidr
@@ -42,25 +44,25 @@ spec:
             - name: svc_enable
               value: "false"
             - name: vip_address
-              value: "10.1.0.165/32"
-            - name: bgp_enable
-              value: "true"
-            - name: bgp_peeraddress
-              value: "10.1.0.1"
-            - name: bgp_as
-              value: "64515" # avoid using same asn as calico so they aren't competing
-            - name: bgp_peeras
-              value: "64513"
-            - name: bgp_routerid
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIP
-            - name: bgp_sourceip
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIP
-            - name: bgp_peers
-              value: "10.1.0.85:65414::false,10.1.0.87:65414::false,10.1.0.91:65414::false"
+              value: "10.1.0.65/32"
+            # - name: bgp_enable
+            #   value: "true"
+            # - name: bgp_peeraddress
+            #   value: "10.1.0.1"
+            # - name: bgp_as
+            #   value: "64515" # avoid using same asn as calico so they aren't competing
+            # - name: bgp_peeras
+            #   value: "64513"
+            # - name: bgp_routerid
+            #   valueFrom:
+            #     fieldRef:
+            #       fieldPath: status.podIP
+            # - name: bgp_sourceip
+            #   valueFrom:
+            #     fieldRef:
+            #       fieldPath: status.podIP
+            # - name: bgp_peers
+            #   value: "10.1.0.85:65414::false,10.1.0.87:65414::false,10.1.0.91:65414::false"
           securityContext:
             capabilities:
               add:
