--- a/provision/ansible/kubernetes/inventory/group_vars/kubernetes/kube-vip.yml
+++ b/provision/ansible/kubernetes/inventory/group_vars/kubernetes/kube-vip.yml
@@ -2,4 +2,5 @@
 # (string) The interface on the host kube-vip should attach to
 # kubevip_interface: "enp89s0"
 # (string) The ARP address kube-vip broadcasts
-kubevip_address: "10.1.0.165"
+kubevip_address: "10.1.0.65"
+# arp_kubevip_address: "10.1.0.65"
