--- a/cluster/apps/system/kustomization.yaml
+++ b/cluster/apps/system/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
   - ./namespace.yaml
   - ./intel-device-plugins/ks.yaml
   - ./snapshot-controller/ks.yaml
+  - ./nvidia-device-plugins/ks.yaml
