--- a/cluster/apps/system/nvidia-device-plugins/operator/helm-release.yaml
+++ b/cluster/apps/system/nvidia-device-plugins/operator/helm-release.yaml
@@ -42,7 +42,7 @@ spec:
       enabled: true
     driver:
       enabled: false
-      version: 590.48.01
+      version: "590.48.01"
     toolkit:
       enabled: true
       env:
