--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -32,3 +32,4 @@ resources:
   # disable until account detangling is figured out
   - ./ytdlp-sub/ks.yaml
   - ./maintainerr/ks.yaml
+  - ./musicbrainz/ks.yaml
