(musicbrainz-picard) Add picard docker

--- a/cluster/apps/media/musicbrainz/app/helm-release.yaml
+++ b/cluster/apps/media/musicbrainz/app/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
         runAsGroup: 568
 
     controllers:
-      navidrome:
+      musuicbrainz-picard:
         containers:
           app:
             image:
