--- a/cluster/apps/media/musicbrainz/app/helm-release.yaml
+++ b/cluster/apps/media/musicbrainz/app/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
         runAsGroup: 568
 
     controllers:
-      musuicbrainz-picard:
+      musicbrainz-picard:
         containers:
           app:
             image:
