whisper: fix ks

--- a/cluster/apps/home/voice/whisper/app/helm-release.yaml
+++ b/cluster/apps/home/voice/whisper/app/helm-release.yaml
@@ -88,7 +88,7 @@ spec:
 
     persistence:
       data:
-        existingClaim: config-whisper-v1
+        existingClaim: whisper-data-v1
         globalMounts:
           - path: /data
 
