--- a/cluster/config/cluster-settings.yaml
+++ b/cluster/config/cluster-settings.yaml
@@ -32,6 +32,7 @@ data:
   LB_V4_TRAEFIK: 10.1.0.101
   LB_V4_TRAEFIK_CLASSIC: 10.1.0.50
   LB_V4_VECTOR_AGGREGATOR: 10.1.0.108
+  LB_V4_WHISPER: 10.10.100.9
   LB_V4_ZWAVEJS: 10.1.0.107
   LOCAL_CIDR_1: "192.168.0.0/16"
   LOCAL_CIDR_2: "10.0.0.0/24"
