(whisper) update service

--- a/cluster/apps/home/voice/whisper/app/helm-release.yaml
+++ b/cluster/apps/home/voice/whisper/app/helm-release.yaml
@@ -84,6 +84,9 @@ spec:
         type: LoadBalancer
         externalTrafficPolicy: Local
         ipFamilyPolicy: PreferDualStack
+        ipFamilies:
+          - IPv4
+          - IPv6
         annotations:
           metallb.io/loadBalancerIPs: "${LB_V4_WHISPER},${LB_V6_WHISPER}"
           external-dns.alpha.kubernetes.io/hostname: "whisper.${XYZ_DOMAIN}"
