(whisper) update tmp mount

--- a/cluster/apps/home/voice/whisper/app/helm-release.yaml
+++ b/cluster/apps/home/voice/whisper/app/helm-release.yaml
@@ -106,3 +106,8 @@ spec:
         type: emptyDir
         globalMounts:
           - path: /.cache
+
+      tmp:
+        type: emptyDir
+        globalMounts:
+          - path: /tmp
