(whisper) switch to whisper asr

--- a/cluster/apps/home/voice/whisper/app/helm-release.yaml
+++ b/cluster/apps/home/voice/whisper/app/helm-release.yaml
@@ -34,20 +34,19 @@ spec:
         containers:
           app:
             image:
-              repository: rhasspy/wyoming-whisper
-              tag: 3.1.0@sha256:9501d2659eee83b6eead98d53842193e5fed011eda6c5b1c3ad36f3146b28fed
+              # repository: rhasspy/wyoming-whisper
+              # tag: 3.1.0@sha256:9501d2659eee83b6eead98d53842193e5fed011eda6c5b1c3ad36f3146b28fed
+              repository: onerahmet/openai-whisper-asr-webservice
+              tag: v1.9.1-gpu@sha256:1132aa08c6eb9b440408864e8c25733d22a197ffea7c6975d60a4f4b6fd7b08b
             env:
               HF_HOME: /data/huggingface
-              TZ: "America/Detroit"
+              TZ: "${TZ}"
+              ASR_ENGINEL: faster_whisper # openai_whisper, faster_whisper
             args:
               - --model
               - base
               - --language
               - en
-            ports:
-              - name: wyoming
-                containerPort: &port 10300
-                protocol: TCP
             resources:
               requests:
                 cpu: 200m
@@ -94,18 +93,13 @@ spec:
         controller: *app
         ports:
           wyoming:
-            port: *port
+            port: 9000
 
     persistence:
-      data:
-        existingClaim: whisper-data-v1
-        globalMounts:
-          - path: /data
-
       cache:
-        type: emptyDir
+        existingClaim: whisper-cache-v1
         globalMounts:
-          - path: /.cache
+          - path: /root/.cache/whisper
 
       tmp:
         type: emptyDir
