--- a/cluster/apps/home/voice/whisper/app/kustomization.yaml
+++ b/cluster/apps/home/voice/whisper/app/kustomization.yaml
@@ -4,4 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helm-release.yaml
-  - ./pvc-cache-v1.yaml
+  - ./pvc-cache.yaml
