--- a/cluster/apps/home/voice/whisper/app/helm-release.yaml
+++ b/cluster/apps/home/voice/whisper/app/helm-release.yaml
@@ -38,13 +38,13 @@ spec:
               # tag: 3.1.0@sha256:9501d2659eee83b6eead98d53842193e5fed011eda6c5b1c3ad36f3146b28fed
               repository: onerahmet/openai-whisper-asr-webservice
               tag: v1.9.1-gpu@sha256:1132aa08c6eb9b440408864e8c25733d22a197ffea7c6975d60a4f4b6fd7b08b
-            env:
-              HF_HOME: /data/huggingface
+            env: #https://ahmetoner.com/whisper-asr-webservice/environmental-variables/#faster_whisper
+              # HF_HOME: /data/huggingface
               TZ: "${TZ}"
-              ASR_ENGINEL: faster_whisper # openai_whisper, faster_whisper
+              ASR_MOdE: =base
+              ASR_ENGINE: faster_whisper # openai_whisper, faster_whisper
+              #AS
             args:
-              - --model
-              - base
               - --language
               - en
             resources:
